@@ -1,3 +1,14 @@
+2002-10-21  David Hyatt  <hyatt@apple.com>
+
+	Fix for margin problems on aintitcool.com.  There was a subtlety
+	to WinIE's quirk.  For <h1>-<h6> only, they don't collapse the
+	bottom margin for table cells (they still collapse the top
+	margin).  I just love emulating the odd behavior of WinIE.
+	Wheee.
+	
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::layoutBlockChildren):
+
 2002-10-20  Darin Adler  <darin@apple.com>
 
 	Redid my fix. It was just an ordering thing. The image had to already be
